--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,12 @@ homepage: https://github.com/orthros/dart-epub
 environment:
   sdk: ">=2.0.0 <3.0.0"
 dependencies:
-  async: ">=1.8.0 <3.0.0"
-  archive: "^2.0.0"
-  quiver: ">=2.0.0 <3.0.0"
-  xml: "^4.2.0"
-  image: ">=1.1.33 <3.0.0"
+  async: ^2.9.0
+  archive: ^3.3.1
+  quiver: ^3.1.0
+  xml: ^6.1.0
+  image: ^3.2.0
 dev_dependencies:
-  test: "^1.0.0"
-  path: "^1.5.1"
-  pedantic: "^1.8.0"
+  test: ^1.21.4
+  path: ^1.8.2
+  pedantic: ^1.11.1
