--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,14 @@ version: 2.1.0
 description: Epub Parser for Dart. Suitable for use on the Server, the Web, or in Flutter
 homepage: https://github.com/orthros/dart-epub
 environment:
-  sdk: ">=2.3.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 dependencies:
   async: ^2.9.0
   archive: ^3.3.1
   quiver: ^3.1.0
   xml: ^6.1.0
   image: ^3.2.0
+  collection: ^1.15.0-nullsafety.4
 dev_dependencies:
   test: ^1.21.4
   path: ^1.8.2
