--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: epub
-version: 3.0.0-0
+version: 3.0.0
 description: Epub Parser for Dart. Suitable for use on the Server, the Web, or in Flutter
 homepage: https://github.com/orthros/dart-epub
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.15.0 <3.0.0'
 dependencies:
   async: ^2.9.0
   archive: ^3.3.1
@@ -11,7 +11,12 @@ dependencies:
   xml: ^6.1.0
   image: ^3.2.0
   collection: ^1.15.0-nullsafety.4
+  adt_annotation: 3.0.3
+  utils:
+
 dev_dependencies:
+  build_runner:
+  adt_generator: 3.0.1
   test: ^1.21.4
   path: ^1.8.2
   pedantic: ^1.11.1
